# Ketamine

./: .gitignore  Cargo.toml  README.md
interpreter/: Cargo.toml
interpreter/src/: lib.rs  scope.rs  serialization.rs
interpreter/src/interpreter/: assignment.rs  branching.rs  expression.rs  instructions.rs  literals.rs  loops.rs  mod.rs
interpreter/src/values/: array.rs  boolean.rs  dictionary.rs  float.rs  function.rs  integer.rs  mod.rs  null.rs  string.rs
lexer/: Cargo.toml
lexer/src/: keywords.rs  lib.rs  operator.rs  token.rs
parser/: Cargo.toml
parser/src/: error.rs  field_access.rs  lib.rs  macros.rs  token_ext.rs  tree.rs
parser/src/ast/: assignment.rs  call.rs  field_access.rs  flow.rs  function.rs  ident.rs  if.rs  index.rs  literals.rs  loops.rs  mod.rs  operation.rs  parentheses.rs  primitives.rs  range.rs  statement.rs
parser/src/statements/: assignment.rs  mod.rs  return.rs  terminated.rs  unterminated.rs  value_statement.rs
parser/src/values/: binary_operation.rs  block.rs  break.rs  call.rs  continue.rs  expression.rs  field_access.rs  for.rs  for_expr.rs  function.rs  function_call.rs  identifier.rs  if.rs  if_expr.rs  list.rs  loop.rs  mod.rs  object.rs  parentheses.rs  primitives.rs  range.rs  return.rs  unary_operation.rs  while.rs
parser2/: Cargo.toml
parser2/src/: lib.rs  macros.rs  token_ext.rs
playground/: Cargo.toml  build_playground.sh
playground/src/: lib.rs
playground/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js  webpack.config.prod.js
report/: Cargo.toml
report/src/: lib.rs
