[package]
name = "interpreter"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
report = { path = "../report" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
serialize = ["serde"]