[package]
name = "lexer"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {version = "1.3", default-features = false, features = ["std", "unicode-perl"] }
once_cell = "1.3"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serialize = ["serde"]