[package]
name = "parser"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
report = { path = "../report" }
log = "0.4"
ptree = "0.2.1"

[dev-dependencies]
env_logger = "0.7.1"