[package]
name = "parser"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
report = { path = "../report" }
log = "0.4"
ptree = { version = "0.2.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
env_logger = "0.7.1"

[features]
tree-view = ["ptree"]
serialize = ["serde", "lexer/serialize"]