[package]
name = "parser"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
report = { path = "../report" }
ptree = { version = "0.2.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
tree-view = ["ptree"]
serialize = ["serde", "lexer/serialize"]