[package]
name = "playground"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.2" }

interpreter  = { path = "../interpreter", features = ["serialize"] }
parser = { path = "../parser", features = ["serialize"] }
lexer = { path = "../lexer", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
report = { path = "../report" }


[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
